--- a/searx/templates/simple/index.html
+++ b/searx/templates/simple/index.html
@@ -1,10 +1,16 @@
 {% extends "simple/base.html" %}
 {% from 'simple/icons.html' import icon_big %}
+
+{% block head %}
+{{ super() }}
+<script src="{{ url_for('static', filename='js/xsearch-logo-rotator.js') }}"></script>
+{% endblock %}
+
 {% block content %}
 <div class="index">
     <div class="title">
-        <img src="{{ url_for('static', filename='themes/simple/img/xsearch-logo.svg') }}"
-             alt="XSearch"
+        <img src="{{ url_for('static', filename='themes/simple/img/xsearch-blue.svg') }}"
+             alt="XSearch by Cognitolabs AI"
              class="index-logo"
              onerror="this.style.display='none'; this.nextElementSibling.style.display='block';">
         <h1 style="display:none;">XSearch</h1>
